fixing a few missing images and broken links

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <h1 class="display-6 name">Research</h1>
         <p class='h4'>Powered By:</p>
         <img src="./Matlab.jpeg" alt='Matlab logo' class='logoBadge'>
-        <img src="./LabVIEW.png" alt='LabVIEW logo' class='logoBadge'>
+        <img src="./labVIEW.png" alt='LabVIEW logo' class='logoBadge'>
     </div>
     
     <div class='research_card'>
@@ -286,11 +286,12 @@
 
   <!-- Start of Projects section -->
   <div class='container' id='projects'>
-        <div class='sub_header'>
+    <div class='row mainRow about_text'>   
+       <div class='sub_header'>
             <h1 class="display-6 name">Projects</h1>
         </div>
     
-    <div class='row mainRow about_text'>
+   
         <div class="col-9">
             <div class="row subRow">
                 <p class='text-box h3'>Coming soon ...</p>
