--- a/short_story_page/index.html
+++ b/short_story_page/index.html
@@ -284,7 +284,7 @@
         <div class="intro_text" id="about">
                <p><span class="first-letter">I</span> am a budding short story writer. Despite not being very good at it, I continue unperturbed!</p>
                <p>Below, you can find the first few parts to my latest short story, which has received feedback that ranges from scything criticism to back-handed complements! 
-                 <br> You can also find out more about me <b><a target="_blank" href="https://dash.generalassemb.ly/SimonN/build-your-own-personal-website" >here</a></b></p>
+                 <br> You can also find out more about me <b><a target="_blank" href="https://simon994.github.io/#about" >here</a></b></p>
         </div>
 
     <!-- Dark mode section -->
