fixing labview logo image

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <h1 class="display-6 name">Research</h1>
         <p class='h4'>Powered By:</p>
         <img src="./Matlab.jpeg" alt='Matlab logo' class='logoBadge'>
-        <img src="./labVIEW.png" alt='LabVIEW logo' class='logoBadge'>
+        <img src="./labview2.jpg" alt='LabVIEW logo' class='logoBadge'>
     </div>
     
     <div class='research_card'>
