--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <!-- Start of About Section -->
 <div class='container' id='about'>
     <div class='row mainRow about_text'>
-        <div class="col-9">
+        <div class="col-md-9 col-sm-12">
             <div class="row subRow">
                 <h1 class="display-4 name">Simon <span class='hl'>R.T.</span> Neil</h1>
             </div>
