changing Writing section background images

--- a/index.html
+++ b/index.html
@@ -308,13 +308,7 @@
     <div class="footer" id="attributions">
         <ul>
            <li> Image attributions: 
-            <span>Photo by <a href="https://unsplash.com/@anchorlee?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Anchor Lee</a></span>
-             | 
-             <span>Photo by <a href="https://unsplash.com/@bernardhermant?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Bernard Hermant</a></span>
-             |
-             <span>Photo by <a href="https://unsplash.com/@bernardhermant?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Bernard Hermant</a></span>
-             |
-             <span>Photo by <a href="https://unsplash.com/@bernardhermant?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Bernard Hermant</a></span>
+            <span>Writing Section Photo by <a href="https://unsplash.com/@marjan_blan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Марьян Блан | @marjanblan</a> on <a href="https://unsplash.com/s/photos/paper-texture?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
         </ul>
         
     </div>
