--- a/index.html
+++ b/index.html
@@ -55,32 +55,25 @@
 <!-- End of navbar -->
 
 <!-- Start of About Section -->
-<div class='container' id='about'>
-    <div class='row mainRow about_text'>
-        <div class="col-md-12 col-lg-9">
-            <div class="row subRow">
-                <h1 class="display-4 name">Simon <span class='hl'>R.T.</span> Neil</h1>
-            </div>
-
-            <div class="row subRow">
-              <div class="hero text-box">
-                <span class="cursor"></span>
-              </div>
-            </div>
-            
-            <div class="row subRow">
-                <p class='text-box'>Experienced professional holding a DPhil (PhD) in Physical and Theoretical Chemistry
-                    from the University of Oxford. General Assembly Software Engineering Fellow. Formerly the Executive Editor for a portfolio of world-renowned scientific journals. 
-                    Life-long learner with knowledge build through successful and wide-ranging collaborations, including with software engineers,
-                     data scientists, UX designers, chemists, and physicists.</p>
-            </div>
-            <div class="row subRow">
+<div class='about_section'>
+  <div class='about_inner'>
+    <div class='about_name'>
+        <h1>Simon <span class='hl'>R.T.</span> Neil</h1>
+    </div>
+  
+    <div class="text_box_outer">
+      <p class='text_box '>I'm a junior software developer with a background in product management and scientific publishing.
+        <br/>
+        My first taste of programming was during my DPhil (PhD) at the University of Oxford. There, I designed and programmed instruments that helped to uncover the chemistry and physics of bird navigation. I also developed a passion for publishing my results, which led me to become the editor for a portfolio of scientific journals. As an editor, I collaborated with software engineers, data scientists and UX designers to develop journal products that our readers and authors loved.
+        <br/>
+        The technology-driven change I experienced in the scientific publishing industry inspired me to return to programming. Now completing the Software Engineering Immersive at General Assembly, I’m looking to apply my skills for problem solving and analysis in an environment that encourages learning and creative, curious thinking.
+      </p>
+    </div>
+  </div>
+            <!-- <div class="row subRow">
                 <a href='https://www.linkedin.com/in/simonrtneil/' target='_blank'><img src='linkedin-icon.jpg' id='linkedIn'></a>
             <a href='https://github.com/Simon994' target='_blank'><img src='GitHub-Mark-64px.png' id='gitHub'></a>
-           
-            </div>
-        </div>
-    </div>
+            </div> -->
 </div>
 
 <!-- End of About Section -->
