--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="row subRow">
-                <p class='text-box'>I'm a junior software developer with a background in product management and scientific publishing.
+                <p class='text-box'>I'm a software engineer with a background in product management and scientific publishing.
                   <br/>
                   <br/>
                   My first taste of programming was during my DPhil (PhD) at the University of Oxford. There, I designed and programmed instruments that helped to uncover the chemistry and physics of bird navigation. I also developed a passion for publishing my results, which led me to become the editor for a portfolio of scientific journals. As an editor, I collaborated with software engineers, data scientists and UX designers to develop journal products that our readers and authors loved.
